--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,23 @@
+@import url("https://fonts.googleapis.com/css2?family=Radio+Canada:wght@300;400;500;600;700&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .primary-btn {
+    @apply hover:ring-4 ring-sec-color;
+  }
+}
+
+body {
+  font-family: "Radio Canada", sans-serif;
+  background-color: #0b1224f3;
+  color: #fafafa;
+}
+.nav-glass {
+  backdrop-filter: blur(3px) saturate(0%);
+  -webkit-backdrop-filter: blur(3px) saturate(0%);
+  background-color: rgba(15, 23, 42, 0.78);
+  border-bottom: 1px solid #9394a2;
+}
