--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,18 @@
 @tailwind components;
 @tailwind utilities;
 
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  background: #0e1224;
+  border-radius: 0px;
+}
+::-webkit-scrollbar-thumb {
+  background: #72e2ae;
+  border-radius: 12px;
+}
+
 body {
   font-family: "Radio Canada", sans-serif;
   background-color: #0b1224f3;
