--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 @tailwind utilities;
 
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 5px;
 }
 ::-webkit-scrollbar-track {
   background: #0e1224;
@@ -14,6 +14,10 @@
 ::-webkit-scrollbar-thumb {
   background: #72e2ae;
   border-radius: 12px;
+}
+::selection {
+  color: #0b1224f3;
+  background-color: #72e2ae;
 }
 
 body {
