--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,7 @@ body {
 .my-glass2 {
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
-  background-color: rgba(15, 23, 42, 0.78);
+  background-color: #0f172ac7;
   border-bottom: 1px solid #9394a2;
 }
 @keyframes rotate {
@@ -105,7 +105,7 @@ body {
     left: 100%;
   }
 }
-.about-list::before {
+.my-list::before {
   content: "";
   position: absolute;
   top: 0.5rem;
@@ -125,4 +125,26 @@ body {
   .section {
     @apply lg:w-[1300px] mx-auto lg:mt-20 p-4 overflow-hidden relative;
   }
+  .project-card {
+    @apply flex gap-1 items-center text-xs p-2 border-b-2 border-main-color hover:bg-main-color hover:shadow-lg shadow-main-color hover:text-[#0f172ac7] hover:rounded duration-300;
+  }
+}
+
+.lazy__slide {
+  height: 300px;
+  background: #0f172ac7;
+  background-color: linear-gradient(0deg, #0f172ac7 0%, #0b1b41c7 100%);
+  background-image: url("./assets/loader.gif");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100px;
+  min-height: auto;
+}
+
+.lazy__slide img {
+  background-color: transparent;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
 }
